--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/placeholder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorAccent"
@@ -48,9 +49,9 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etEmail"
-                android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:inputType="textEmailAddress"
                 android:padding="4dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -60,12 +61,12 @@
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_margin="4dp"
-            app:passwordToggleEnabled="true"
             android:hint="@string/Password"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/inputEmail"
-            app:layout_constraintWidth_percent=".7">
+            app:layout_constraintWidth_percent=".7"
+            app:passwordToggleEnabled="true">
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/etPassword"
@@ -75,6 +76,36 @@
                 android:padding="4dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnLogin"
+            android:layout_width="200dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="14dp"
+            android:padding="4dp"
+            android:text="@string/log_in"
+            android:textSize="16sp"
+            android:enabled="false"
+            style="@style/Widget.MaterialComponents.Button"
+            app:layout_constraintTop_toBottomOf="@id/inputPassword"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="14dp"
+            android:padding="4dp"
+            android:text="@string/log_in"
+            android:textSize="16sp"
+            android:visibility="gone"
+            style="@style/Widget.AppCompat.ProgressBar"
+            app:layout_constraintTop_toBottomOf="@id/inputPassword"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
